--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.18",
+    "swiper": "^11.0.5",
     "tsparticles-slim": "^2.11.1"
   },
   "devDependencies": {
