--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-lazy-load": "^4.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-particles": "^2.11.0",
     "react-router-dom": "^6.14.1",
