--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.15.15",
+    "@mui/styles": "^5.15.15",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "emailjs": "^4.0.2",
